169 add Llama model support (#170)
* Aws service can respond simple question
* implement LLama service